--- a/src/Header.css
+++ b/src/Header.css
@@ -1,3 +1,12 @@
+.App{
+background-color: #E7E7E7;
+height:780px;
+object-fit: contain;
+
+
+
+}
+
 .header {
     height: 60px;
     display: flex;
@@ -12,14 +21,16 @@
     width: 100px;
     object-fit: contain;
     margin-right:100%;
+    margin-top:10px;
+    margin-left:20px;
   }
   
   .header__search {
-    margin-top:30px;
+    margin-top:20px;
     margin-left:30%;
     margin-right:10%;
-    display: flex;
-    flex: 1;
+  display:flex;
+  flex:0.1;
     align-items: center;
     border-radius: 50%;
    
@@ -32,13 +43,22 @@
     border: none;
     width: 100%;
     border-radius:20px;
-    background-color: #dadce2;
+    background-color: #D9D9D9;
   }
   
   .header__searchIcon {
-    padding: 4px;
+    padding:3px;
     height: 20px;
    margin-right:30%;
+   background-color:#dd8a15;
+   border-radius:10px;
+   cursor:pointer;
+   transition-duration: 0.4s;
+  }
+
+  .header__searchIcon:hover {
+    background-color:#a36a1b;
+    color:#fff;
   }
   
   .header__optionLineOne {
