--- a/src/views/components/header/Header.css
+++ b/src/views/components/header/Header.css
@@ -8,38 +8,27 @@
     z-index: 100;
   }
   
-  .header__logo {
-    width: 100px;
-    object-fit: contain;
-    margin-right:100%;
-  }
-  
   .header__search {
     margin-top:30px;
-    margin-left:30%;
-    margin-right:10%;
     display: flex;
-    flex: 1;
     align-items: center;
+    justify-content: center;
     border-radius: 50%;
-   
-
+   width: 100%;
+   gap: 1rem;
   }
   
   .header__searchInput {
-    height: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+    outline: none;
     padding: 10px;
     border: none;
-    width: 100%;
+    width: 85vw;
+    max-width: 700px;
     border-radius:20px;
     background-color: #dadce2;
-  }
   
-  .header__searchIcon {
-    padding: 4px;
-    height: 20px;
-   margin-right:30%;
-   
   }
   .header__searchIcon:hover{
     cursor: pointer;
